--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <li><a href="https://cinderella.idolmaster.jp/sl-stage/" target="_blank" rel="noopener noreferrer">
                     アイドルマスター シンデレラガールズ スターライトステージ
                 </a></li>
-            <a><a href="https://www.inazuma.jp/" target="_blank" rel="noopener noreferrer">
+            <li><a href="https://www.inazuma.jp/" target="_blank" rel="noopener noreferrer">
                     イナズマイレブン
-                </a></a>
+                </a></li>
         </ul>
         <h2>
             Accounts
