--- a/html/bitratecalc.html
+++ b/html/bitratecalc.html
@@ -40,6 +40,8 @@
             <input type="button" value="192Kbps" onclick="SetAudio(192)">
             <input type="button" value="256Kbps" onclick="SetAudio(256)">
             <input type="button" value="320Kbps" onclick="SetAudio(320)">
+            <input type="button" value="512Kbps" onclick="SetAudio(512)">
+            <input type="button" value="768Kbps" onclick="SetAudio(768)">
           </p>
           <p id="big">
             Video Bitrate
