--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <span class="c">さくら夜</span>
     </h2>
     <p class="nobr">
-        ガジェクラやってたり、<wbr>ノベルゲーや<wbr>音ゲーを<wbr>プレイ<wbr>したり<wbr>してる<wbr>ネットワーク学科の<wbr>ゆるふわ<wbr>初心者な<wbr>学生です。
+        ガジェクラやってたり、<wbr>ノベルゲーや<wbr>音ゲーを<wbr>プレイ<wbr>したり<wbr>してる<wbr>ネットワーク学科の<wbr>ゆるふわ<wbr>初心者な<wbr>学生です。<br>
+        <a href="https://www.maniackers.club" target="_blank" rel="noopener noreferrer">MANICKERS</a>所属。
+
     </p>
         <h2>
             好きな作品
@@ -57,7 +59,7 @@
             Accounts
         </h2>
         <a href="https://twitter.com/kk16p586" target="_blank" rel="noopener noreferrer">さくら夜 | Twitter</a><br>
-        <a href="https://github.com/sakurayoru" target="_blank" rel="noopener noreferrer">GitHub | さくら夜</a><br>
+        <a href="https://github.com/sakurayoru" target="_blank" rel="noopener noreferrer">さくら夜 | GitHub</a><br>
         <a href="https://deresute.me/873623620" target="_blank" rel="noopener noreferrer">さくら夜 | deresute.me</a>
         <h2>
             所持機材について
