--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="さくら夜のプロフィール" />
     <meta property="og:description" content="MANIACKERS所属さくら夜のプロフィールです" />
     <meta property="og:image" content="./img/profilecard.png" />
+    <base target="_blank" rel="noopener noreferrer">
     <link rel="stylesheet" href="./css/css01.css" type="text/css">
     <title>
         さくら夜のプロフィール
@@ -31,40 +32,40 @@
             好きな作品
         </h2>
         <ul>
-            <li><a href="https://colopl.co.jp/magicianwiz/" target="_blank" rel="noopener noreferrer">
+            <li><a href="https://colopl.co.jp/magicianwiz/">
                     魔法使いと黒猫のウィズ
                 </a></li>
-            <li><a href="http://www.corocoro.tv/pokesp/" target="_blank" rel="noopener noreferrer">
+            <li><a href="http://www.corocoro.tv/pokesp/">
                     ポケットモンスター SPECIAL
                 </a></li>
-            <li><a href="http://www.nanoha.com/" target="_blank" rel="noopener noreferrer">
+            <li><a href="http://www.nanoha.com/">
                     魔法少女リリカルなのは
                 </a></li>
-            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/" target="_blank" rel="noopener noreferrer">
+            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
                     はつゆきさくら
                 </a></li>
-            <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/" target="_blank" rel="noopener noreferrer">
+            <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
                     花咲ワークスプリング!
                 </a></li>
-            <li><a href="http://www.yuzu-soft.com/products/senren/" target="_blank" rel="noopener noreferrer">
+            <li><a href="http://www.yuzu-soft.com/products/senren/">
                     千恋*万花
                 </a></li>
-            <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/" target="_blank"
-                    rel="noopener noreferrer">サノバウィッチ
+            <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
+                    サノバウィッチ
                 </a></li>
-            <li><a href="https://cinderella.idolmaster.jp/sl-stage/" target="_blank" rel="noopener noreferrer">
+            <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
                     アイドルマスター シンデレラガールズ スターライトステージ
                 </a></li>
-            <li><a href="https://www.inazuma.jp/" target="_blank" rel="noopener noreferrer">
+            <li><a href="https://www.inazuma.jp/">
                     イナズマイレブン
                 </a></li>
         </ul>
         <h2>
             Accounts
         </h2>
-        <a href="https://twitter.com/kk16p586" target="_blank" rel="noopener noreferrer">さくら夜 | Twitter</a><br>
-        <a href="https://github.com/sakurayoru" target="_blank" rel="noopener noreferrer">GitHub | さくら夜</a><br>
-        <a href="https://deresute.me/873623620" target="_blank" rel="noopener noreferrer">さくら夜 | deresute.me</a>
+        <a href="https://twitter.com/kk16p586">さくら夜 | Twitter</a><br>
+        <a href="https://github.com/sakurayoru">GitHub | さくら夜</a><br>
+        <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a>
         <h2>
             所持機材について
         </h2>
@@ -75,8 +76,9 @@
             <li>Xperia XZ1 Compat SO-02K(docomo)</li>
             <li>Lenovo ThinkPad T480s(IIJmio Type-D,Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
             <li>ArrowsTab Q506/ME(Windows 10 Pro Education,1903)</li>
+            <li>ArrowsTab Q506/ME(Windows 10 Pro,1903)</li>
             <li>MNCN2J/A(IIJmio Type-A,iPhone 7,128GB,RoseGold)</li>
-            <li>MUU32X/A(iPad mini,256GB)</li>
+            <li>MUU32X/A(iPad mini,Wi-Fi,256GB)</li>
             <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
             <li><del>YAMAHA RTX1200</del></li>
         </ul>
