--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:title" content="さくら夜のプロフィール" />
     <meta property="og:description" content="MANIACKERS所属さくら夜のプロフィールです" />
     <meta property="og:image" content="./img/profilecard.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon.png">
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     <base target="_blank" rel="noopener noreferrer">
     <link rel="stylesheet" href="./css/css01.css" type="text/css">
     <title>
