--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="sakurayoru.dev" />
     <meta property="og:title" content="さくら夜のプロフィール" />
     <meta property="og:description" content="MANIACKERS所属さくら夜のプロフィールです" />
-    <meta property="og:image" content="./img/profilecard.png" />
+    <meta property="og:image" content="https://sakurayoru.dev/img/profilecard.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon.png">
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <base target="_blank" rel="noopener noreferrer">
@@ -32,90 +32,90 @@
         <a href="https://www.maniackers.club" target="_blank" rel="noopener noreferrer">MANICKERS</a>所属。
 
     </p>
-        <h2>
-            好きな作品
-        </h2>
-        <ul>
-            <li><a href="https://colopl.co.jp/magicianwiz/">
-                    魔法使いと黒猫のウィズ
-                </a></li>
-            <li><a href="http://www.corocoro.tv/pokesp/">
-                    ポケットモンスター SPECIAL
-                </a></li>
-            <li><a href="http://www.nanoha.com/">
-                    魔法少女リリカルなのは
-                </a></li>
-            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
-                    はつゆきさくら
-                </a></li>
-            <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
-                    花咲ワークスプリング!
-                </a></li>
-            <li><a href="http://www.yuzu-soft.com/products/senren/">
-                    千恋*万花
-                </a></li>
-            <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
-                    サノバウィッチ
-                </a></li>
-            <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
-                    アイドルマスター シンデレラガールズ スターライトステージ
-                </a></li>
-            <li><a href="https://www.inazuma.jp/">
-                    イナズマイレブン
-                </a></li>
-        </ul>
-        <h2>
-            Accounts
-        </h2>
-        <a href="https://twitter.com/kk16p586">さくら夜 | Twitter</a><br>
-        <a href="https://github.com/sakurayoru">GitHub | さくら夜</a><br>
-        <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a>
-        <h2>
-            所持機材について
-        </h2>
-        <h3>
-            メイン機材(普段使っている機材)
-        </h3>
-        <ul>
-            <li>Xperia XZ1 Compat SO-02K(docomo)</li>
-            <li>Lenovo ThinkPad T480s(IIJmio Type-D,Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
-            <li>ArrowsTab Q506/ME(Windows 10 Pro Education,1903)</li>
-            <li>ArrowsTab Q506/ME(Windows 10 Pro,1903)</li>
-            <li>MNCN2J/A(IIJmio Type-A,iPhone 7,128GB,RoseGold)</li>
-            <li>MUU32X/A(iPad mini,Wi-Fi,256GB)</li>
-            <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
-            <li><del>YAMAHA RTX1200</del></li>
-        </ul>
-        <h3>
-            サブ機材
-        </h3>
-        <ul>
-            <li>AQUOS ZETA SH-01H(SIMロック解除済み)</li>
-            <li>ME280J/A(iPad mini 2,Wi-Fi,32GB)</li>
-            <li>flo(Nexus 7,2013,32GB)</li>
-            <li>KFDOWI(Kindle fire HD8,2017,16GB)</li>
-            <li>LL870/CS(Windows10 1803,RAM8GB,HDD1000GB)</li>
-        </ul>
-        <h3>
-            売却予定機材
-        </h3>
-        <ul>
-            <li>HTC J HTL22(KDDI locked)</li>
-            <li>マウスコンピュータ MADOSMA Q501HW</li>
-        </ul>
-        <h3>
-            コレクション機材
-        </h3>
-        <ul>
-            <li>Sony Elicsson Xperia acro SO-02C</li>
-            <li>LL770/FG(OSなし)</li>
-        </ul>
-        <h3>
-            過去所持機材
-        </h3>
-        <ul>
-            <li>MacBook 2006(OS X v10.5 Leopard)</li>
-        </ul>
+    <h2>
+        好きな作品
+    </h2>
+    <ul>
+        <li><a href="https://colopl.co.jp/magicianwiz/">
+                魔法使いと黒猫のウィズ
+            </a></li>
+        <li><a href="http://www.corocoro.tv/pokesp/">
+                ポケットモンスター SPECIAL
+            </a></li>
+        <li><a href="http://www.nanoha.com/">
+                魔法少女リリカルなのは
+            </a></li>
+        <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
+                はつゆきさくら
+            </a></li>
+        <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
+                花咲ワークスプリング!
+            </a></li>
+        <li><a href="http://www.yuzu-soft.com/products/senren/">
+                千恋*万花
+            </a></li>
+        <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
+                サノバウィッチ
+            </a></li>
+        <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
+                アイドルマスター シンデレラガールズ スターライトステージ
+            </a></li>
+        <li><a href="https://www.inazuma.jp/">
+                イナズマイレブン
+            </a></li>
+    </ul>
+    <h2>
+        Accounts
+    </h2>
+    <a href="https://twitter.com/kk16p586">さくら夜 | Twitter</a><br>
+    <a href="https://github.com/sakurayoru">GitHub | さくら夜</a><br>
+    <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a>
+    <h2>
+        所持機材について
+    </h2>
+    <h3>
+        メイン機材(普段使っている機材)
+    </h3>
+    <ul>
+        <li>Xperia XZ1 Compat SO-02K(docomo)</li>
+        <li>Lenovo ThinkPad T480s(IIJmio Type-D,Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
+        <li>ArrowsTab Q506/ME(Windows 10 Pro Education,1903)</li>
+        <li>ArrowsTab Q506/ME(Windows 10 Pro,1903)</li>
+        <li>MNCN2J/A(IIJmio Type-A,iPhone 7,128GB,RoseGold)</li>
+        <li>MUU32X/A(iPad mini,Wi-Fi,256GB)</li>
+        <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
+        <li><del>YAMAHA RTX1200</del></li>
+    </ul>
+    <h3>
+        サブ機材
+    </h3>
+    <ul>
+        <li>AQUOS ZETA SH-01H(SIMロック解除済み)</li>
+        <li>ME280J/A(iPad mini 2,Wi-Fi,32GB)</li>
+        <li>flo(Nexus 7,2013,32GB)</li>
+        <li>KFDOWI(Kindle fire HD8,2017,16GB)</li>
+        <li>LL870/CS(Windows10 1803,RAM8GB,HDD1000GB)</li>
+    </ul>
+    <h3>
+        売却予定機材
+    </h3>
+    <ul>
+        <li>HTC J HTL22(KDDI locked)</li>
+        <li>マウスコンピュータ MADOSMA Q501HW</li>
+    </ul>
+    <h3>
+        コレクション機材
+    </h3>
+    <ul>
+        <li>Sony Elicsson Xperia acro SO-02C</li>
+        <li>LL770/FG(OSなし)</li>
+    </ul>
+    <h3>
+        過去所持機材
+    </h3>
+    <ul>
+        <li>MacBook 2006(OS X v10.5 Leopard)</li>
+    </ul>
 </body>
 
 </html>
