--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
         <img src="./img/icon.png" alt="さくら夜のアイコン" class="l" width="50vmin">
         <span class="c">さくら夜</span>
     </h2>
-    <p class="nobr">
-        ガジェクラやってたり、<wbr>ノベルゲーや<wbr>音ゲーを<wbr>プレイ<wbr>したり<wbr>してる<wbr>ネットワーク学科の<wbr>ゆるふわ<wbr>初心者な<wbr>学生です。<br>
-        <a href="https://www.maniackers.club" target="_blank" rel="noopener noreferrer">MANICKERS</a>所属。
-
+    <p>
+        <div>ガジェクラやってたり、</div>
+        <div>ノベルゲーや</div>
+        <div>音ゲーを</div>
+        <div>プレイ</div>
+        <div>したり</div>
+        <div>してる</div>
+        <div>ネットワーク学科の</div>
+        <div>ゆるふわ</div>
+        <div>初心者な</div>
+        <div>学生です。</div><br>
+        <a href="https://www.maniackers.club">
+            MANICKERS
+        </a>所属。
     </p>
     <h2>
         好きな作品
