--- a/index.html
+++ b/index.html
@@ -87,25 +87,26 @@
         メイン機材(普段使っている機材)
     </h3>
     <ul>
-        <li>Xperia XZ1 Compat SO-02K(docomo)</li>
-        <li>Lenovo ThinkPad T480s(IIJmio Type-D,Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
-        <li>ArrowsTab Q506/ME(Windows 10 Pro Education,1903)</li>
-        <li>ArrowsTab Q506/ME(Windows 10 Pro,1903)</li>
-        <li>MNCN2J/A(IIJmio Type-A,iPhone 7,128GB,RoseGold)</li>
-        <li>MUU32X/A(iPad mini,Wi-Fi,256GB)</li>
+        <li>SONY Xperia XZ1 Compat SO-02K</li>
+        <li>Lenovo ThinkPad T480s(Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
+        <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro Education 1903)</li>
+        <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro 1903)</li>
+        <li>Apple iPhone 7(128GB,RoseGold)</li>
+        <li>Apple iPad mini(2019,Wi-Fi,256GB,Space Gray)</li>
         <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
         <li><del>YAMAHA RTX1200</del></li>
+        <li>Apple Apple Watch Series 3(Space Gray)</li>
         <li>Apple iMac 21.5 Late 2009(OSX 10.13.6,RAM8GB,HDD500GB)</li>
     </ul>
     <h3>
         サブ機材
     </h3>
     <ul>
-        <li>AQUOS ZETA SH-01H(SIMロック解除済み)</li>
-        <li>ME280J/A(iPad mini 2,Wi-Fi,32GB)</li>
-        <li>flo(Nexus 7,2013,32GB)</li>
-        <li>KFDOWI(Kindle fire HD8,2017,16GB)</li>
-        <li>LL870/CS(Windows10 1803,RAM8GB,HDD1000GB)</li>
+        <li>SHARP AQUOS ZETA SH-01H(SIMロック解除済み)</li>
+        <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
+        <li>ASUS Nexus 7(2013,Wi-Fi,32GB,White)</li>
+        <li>Amazon Kindle Fire HD8(2017,16GB)</li>
+        <li>NEC LaVie L LL870/CS(Windows10 Pro 1803,RAM8GB,HDD1000GB)</li>
     </ul>
     <h3>
         売却予定機材
@@ -119,7 +120,7 @@
     </h3>
     <ul>
         <li>Sony Elicsson Xperia acro SO-02C</li>
-        <li>LL770/FG(OSなし)</li>
+        <li>NEC LaVie L LL770/FG(OSなし)</li>
     </ul>
     <h3>
         過去所持機材
