--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         MyProfile
     </h1>
     <h2>
-        <img src="./img/icon.png" alt="さくら夜のアイコン" class="l" width="50vmin">
+        <img src="./img/icon.webp" alt="さくら夜のアイコン" class="l" width="50vmin">
         <span class="c">さくら夜</span>
     </h2>
     <p>
