--- a/index.html
+++ b/index.html
@@ -39,33 +39,33 @@
     <h2>
         好きな作品
     </h2>
-    <ul>
+    <ul class="nobr">
         <li><a href="https://colopl.co.jp/magicianwiz/">
-                魔法使いと黒猫のウィズ
+                魔法使いと<wbr>黒猫の<wbr>ウィズ
             </a></li>
         <li><a href="http://www.corocoro.tv/pokesp/">
-                ポケットモンスター SPECIAL
+                ポケットモンスター <wbr>SPECIAL
             </a></li>
         <li><a href="http://www.nanoha.com/">
-                魔法少女リリカルなのは
+                魔法少女<wbr>リリカル<wbr>なのは
             </a></li>
         <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
-                はつゆきさくら
+                はつゆき<wbr>さくら
             </a></li>
         <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
-                花咲ワークスプリング!
+                花咲<wbr>ワークスプリング!
             </a></li>
         <li><a href="http://www.yuzu-soft.com/products/senren/">
                 千恋*万花
             </a></li>
         <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
-                サノバウィッチ
+                サノバ<wbr>ウィッチ
             </a></li>
         <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
-                アイドルマスター シンデレラガールズ スターライトステージ
+                アイドル<wbr>マスター <wbr>シンデレラ<wbr>ガールズ <wbr>スター<wbr>ライト<wbr>ステージ
             </a></li>
         <li><a href="https://www.inazuma.jp/">
-                イナズマイレブン
+                イナズマ<wbr>イレブン
             </a></li>
     </ul>
     <h2>
