--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 ポケットモンスター <wbr>SPECIAL
             </a></li>
         <li><a href="http://www.nanoha.com/">
-                魔法少女<wbr>リリカル<wbr>なのは
+                魔法少女リリカル<wbr>なのは
             </a></li>
         <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
                 はつゆき<wbr>さくら
@@ -59,13 +59,13 @@
                 千恋*万花
             </a></li>
         <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
-                サノバ<wbr>ウィッチ
+                サノバウィッチ
             </a></li>
         <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
-                アイドル<wbr>マスター <wbr>シンデレラ<wbr>ガールズ <wbr>スター<wbr>ライト<wbr>ステージ
+                アイドルマスター <wbr>シンデレラガールズ <wbr>スターライトステージ
             </a></li>
         <li><a href="https://www.inazuma.jp/">
-                イナズマ<wbr>イレブン
+                イナズマイレブン
             </a></li>
     </ul>
     <h2>
