--- a/index.html
+++ b/index.html
@@ -37,91 +37,97 @@
         </a>所属。
     </p>
     <h2>
-        好きな作品
+        Products
     </h2>
-    <ul>
-        <li><a href="https://colopl.co.jp/magicianwiz/">
-                魔法使いと黒猫のウィズ
-            </a></li>
-        <li><a href="http://www.corocoro.tv/pokesp/">
-                ポケットモンスター SPECIAL
-            </a></li>
-        <li><a href="http://www.nanoha.com/">
-                魔法少女リリカルなのは
-            </a></li>
-        <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
-                はつゆきさくら
-            </a></li>
-        <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
-                花咲ワークスプリング!
-            </a></li>
-        <li><a href="http://www.yuzu-soft.com/products/senren/">
-                千恋*万花
-            </a></li>
-        <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
-                サノバウィッチ
-            </a></li>
-        <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
-                アイドルマスター シンデレラガールズ スターライトステージ
-            </a></li>
-        <li><a href="https://www.inazuma.jp/">
-                イナズマイレブン
-            </a></li>
-    </ul>
-    <h2>
-        Accounts
-    </h2>
-    <a href="https://twitter.com/kk16p586">さくら夜 | Twitter</a><br>
-    <a href="https://github.com/sakurayoru">GitHub | さくら夜</a><br>
-    <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a>
-    <h2>
-        所持機材について
-    </h2>
-    <h3>
-        メイン機材(普段使っている機材)
-    </h3>
-    <ul>
-        <li>SONY Xperia XZ1 Compat SO-02K</li>
-        <li>Lenovo ThinkPad T480s(Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
-        <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro Education 1903)</li>
-        <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro 1903)</li>
-        <li>Apple iPhone 7(128GB,RoseGold)</li>
-        <li>Apple iPad mini(2019,Wi-Fi,256GB,Space Gray)</li>
-        <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
-        <li><del>YAMAHA RTX1200</del></li>
-        <li>Apple Apple Watch Series 3(Space Gray)</li>
-        <li>Apple iMac 21.5 Late 2009(OSX 10.13.6,RAM8GB,HDD500GB)</li>
-    </ul>
-    <h3>
-        サブ機材
-    </h3>
-    <ul>
-        <li>SHARP AQUOS ZETA SH-01H(SIMロック解除済み)</li>
-        <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
-        <li>ASUS Nexus 7(2013,Wi-Fi,32GB,White)</li>
-        <li>Amazon Kindle Fire HD8(2017,16GB)</li>
-        <li>NEC LaVie L LL870/CS(Windows10 Pro 1803,RAM8GB,HDD1000GB)</li>
-    </ul>
-    <h3>
-        売却予定機材
-    </h3>
-    <ul>
-        <li>HTC J HTL22(KDDI locked)</li>
-        <li>マウスコンピュータ MADOSMA Q501HW</li>
-    </ul>
-    <h3>
-        コレクション機材
-    </h3>
-    <ul>
-        <li>Sony Elicsson Xperia acro SO-02C</li>
-        <li>NEC LaVie L LL770/FG(OSなし)</li>
-    </ul>
-    <h3>
-        過去所持機材
-    </h3>
-    <ul>
-        <li>MacBook 2006(OS X v10.5 Leopard)</li>
-    </ul>
+    <a href="https://kcgfreeroom.netlify.com" target="_blank" rel="noopener noreferrer" class="nobr">
+        【非公式】<wbr>KCG空き教室<wbr>リアルタイム<wbr>表示システム
+    </a>
+        <h2>
+            好きな作品
+        </h2>
+        <ul>
+            <li><a href="https://colopl.co.jp/magicianwiz/">
+                    魔法使いと黒猫のウィズ
+                </a></li>
+            <li><a href="http://www.corocoro.tv/pokesp/">
+                    ポケットモンスター SPECIAL
+                </a></li>
+            <li><a href="http://www.nanoha.com/">
+                    魔法少女リリカルなのは
+                </a></li>
+            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
+                    はつゆきさくら
+                </a></li>
+            <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
+                    花咲ワークスプリング!
+                </a></li>
+            <li><a href="http://www.yuzu-soft.com/products/senren/">
+                    千恋*万花
+                </a></li>
+            <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
+                    サノバウィッチ
+                </a></li>
+            <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
+                    アイドルマスター シンデレラガールズ スターライトステージ
+                </a></li>
+            <li><a href="https://www.inazuma.jp/">
+                    イナズマイレブン
+                </a></li>
+        </ul>
+        <h2>
+            Accounts
+        </h2>
+        <a href="https://twitter.com/kk16p586">さくら夜 | Twitter</a><br>
+        <a href="https://github.com/sakurayoru">GitHub | さくら夜</a><br>
+        <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a>
+        <h2>
+            所持機材について
+        </h2>
+        <h3>
+            メイン機材(普段使っている機材)
+        </h3>
+        <ul>
+            <li>SONY Xperia XZ1 Compat SO-02K</li>
+            <li>Lenovo ThinkPad T480s(Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
+            <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro Education 1903)</li>
+            <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro 1903)</li>
+            <li>Apple iPhone 7(128GB,RoseGold)</li>
+            <li>Apple iPad mini(2019,Wi-Fi,256GB,Space Gray)</li>
+            <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
+            <li><del>YAMAHA RTX1200</del></li>
+            <li>Apple Apple Watch Series 3(Space Gray)</li>
+            <li>Apple iMac 21.5 Late 2009(OSX 10.13.6,RAM8GB,HDD500GB)</li>
+        </ul>
+        <h3>
+            サブ機材
+        </h3>
+        <ul>
+            <li>SHARP AQUOS ZETA SH-01H(SIMロック解除済み)</li>
+            <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
+            <li>ASUS Nexus 7(2013,Wi-Fi,32GB,White)</li>
+            <li>Amazon Kindle Fire HD8(2017,16GB)</li>
+            <li>NEC LaVie L LL870/CS(Windows10 Pro 1803,RAM8GB,HDD1000GB)</li>
+        </ul>
+        <h3>
+            売却予定機材
+        </h3>
+        <ul>
+            <li>HTC J HTL22(KDDI locked)</li>
+            <li>マウスコンピュータ MADOSMA Q501HW</li>
+        </ul>
+        <h3>
+            コレクション機材
+        </h3>
+        <ul>
+            <li>Sony Elicsson Xperia acro SO-02C</li>
+            <li>NEC LaVie L LL770/FG(OSなし)</li>
+        </ul>
+        <h3>
+            過去所持機材
+        </h3>
+        <ul>
+            <li>MacBook 2006(OS X v10.5 Leopard)</li>
+        </ul>
 </body>
 
 </html>
