消えていたh2を復活

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <a href="https://kcgfreeroom.netlify.com" target="_blank" rel="noopener noreferrer" class="nobr">
         【非公式】<wbr>KCG空き教室<wbr>リアルタイム<wbr>表示システム
     </a>
+        <h2>
+            好きな作品
+        </h2>
         <ul class="nobr">
             <li><a href="https://colopl.co.jp/magicianwiz/">
                     魔法使いと<wbr>黒猫の<wbr>ウィズ
