【非公式】の文字を消去

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         Products
     </h2>
     <a href="https://kcgfreeroom.netlify.com" target="_blank" rel="noopener noreferrer" class="nobr">
-        【非公式】<wbr>KCG空き教室<wbr>リアルタイム<wbr>表示システム
+        KCG空き教室<wbr>リアルタイム<wbr>表示システム
     </a>
         <h2>
             好きな作品
