--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             サブ機材
         </h3>
         <ul>
+            <li>LG V20 PRO L-01J</li>
+            <li>SONY Xperia Z Ultla SOL24</li>
             <li>SHARP AQUOS ZETA SH-01H(SIMロック解除済み)</li>
             <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
             <li>ASUS Nexus 7(2013,Wi-Fi,32GB,White)</li>
