--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
         MyProfile
     </h1>
     <h2>
-        <img src="./img/icon.webp" alt="さくら夜のアイコン" class="l" width="50vmin">
+        <img src="./img/favicon.png" alt="さくら夜のアイコン" class="l" width="50vmin">
         <span class="c">さくら夜</span>
     </h2>
     <p class="nobr">
-        ガジェクラ<wbr>やってたり、<wbr>ノベルゲーや<wbr>
-        音ゲーを<wbr>プレイ<wbr>したり<wbr>
-        してる<wbr>ネットワーク学科の<wbr>ゆるふわ<wbr>
-        初心者な<wbr>学生です。<br>
+        ガジェクラ<wbr>やってたり、<wbr>ノベルゲーや<wbr>音ゲーを<wbr>プレイ<wbr>したり<wbr>カラオケ<wbr>したり<wbr>してる<wbr>ネットワーク学科の<wbr>ゆるふわ<wbr>初心者な<wbr>学生です。<br>
         <a href="https://www.maniackers.club">
             MANICKERS
         </a>所属。
@@ -43,24 +40,37 @@
         KCG空き教室<wbr>リアルタイム<wbr>表示システム
     </a>
         <h2>
+            Favorite Characters
+        </h2>
+        <ul class="nobr">
+            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/char.htm#yr" target="_blank"
+                    rel="noopener noreferrer">
+                    あずま夜|<wbr>はつゆき<wbr>さくら
+                </a></li>
+            <li>
+                八神はやて|<wbr>魔法少女リリカル☆<wbr>なのは
+            </li>
+        </ul>
+        <h2><img src="https://chunithm-net.com/mobile/img/b67816a78e0ed85d.png" alt="八神はやて"></h2>
+        <h2>
             好きな作品
         </h2>
         <ul class="nobr">
             <li><a href="https://colopl.co.jp/magicianwiz/">
                     魔法使いと<wbr>黒猫の<wbr>ウィズ
-            </a></li>
+        </a></li>
             <li><a href="http://www.corocoro.tv/pokesp/">
                     ポケットモンスター <wbr>SPECIAL
-            </a></li>
+        </a></li>
             <li><a href="http://www.nanoha.com/">
                     魔法少女リリカル<wbr>なのは
-            </a></li>
+        </a></li>
             <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
                     はつゆき<wbr>さくら
-            </a></li>
+        </a></li>
             <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
                     花咲<wbr>ワークスプリング!
-            </a></li>
+        </a></li>
             <li><a href="http://www.yuzu-soft.com/products/senren/">
                     千恋*万花
                 </a></li>
@@ -69,7 +79,7 @@
                 </a></li>
             <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
                     アイドルマスター <wbr>シンデレラガールズ <wbr>スターライトステージ
-            </a></li>
+        </a></li>
             <li><a href="https://www.inazuma.jp/">
                     イナズマイレブン
                 </a></li>
