[update]update devices

--- a/index.html
+++ b/index.html
@@ -118,14 +118,13 @@
             <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
             <li>ASUS Nexus 7(2013,Wi-Fi,32GB,White)</li>
             <li>Amazon Kindle Fire HD8(2017,16GB)</li>
-            <li>NEC LaVie L LL870/CS(Windows10 Pro 1803,RAM8GB,HDD1000GB)</li>
+            <li>NEC LaVie L LL870/CS(Windows10 Pro 1803|CentOS7,RAM8GB,HDD1000GB | HDD80GB)</li>
         </ul>
         <h3>
             売却予定機材
         </h3>
         <ul>
             <li>HTC J HTL22(KDDI locked)</li>
-            <li>マウスコンピュータ MADOSMA Q501HW</li>
         </ul>
         <h3>
             コレクション機材
@@ -139,6 +138,7 @@
         </h3>
         <ul>
             <li>MacBook 2006(OS X v10.5 Leopard)</li>
+            <li>マウスコンピュータ MADOSMA Q501HW</li>
         </ul>
 </body>
 
