--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <li>
                 八神はやて|<wbr>魔法少女リリカル☆<wbr>なのは
             </li>
+            <li>
+                ヴィータ|<wbr>魔法少女リリカル☆<wbr>なのは
+            </li>
         </ul>
         <h2><img src="https://chunithm-net.com/mobile/img/b67816a78e0ed85d.png" alt="八神はやて"></h2>
         <h2>
@@ -98,27 +101,29 @@
         </h3>
         <ul>
             <li>SONY Xperia XZ1 Compat SO-02K</li>
-            <li>Lenovo ThinkPad T480s(Windows 10 Pro 1903,RAM24GB,SSD1000GB)</li>
+            <li>Apple Mac Book Pro 16" Late2019(i7-9750H,SSD1000GB,RAM32GB)</li>
             <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro Education 1903)</li>
             <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro 1903)</li>
             <li>Apple iPhone 7(128GB,RoseGold)</li>
             <li>Apple iPad mini(2019,Wi-Fi,256GB,Space Gray)</li>
-            <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
+            <li>HUAWEI Speed Wi-Fi Next W05(ijmio Type-A)</li>
             <li><del>YAMAHA RTX1200</del></li>
             <li>Apple Apple Watch Series 3(Space Gray)</li>
-            <li>Apple iMac 21.5 Late 2009(OSX 10.13.6,RAM8GB,HDD500GB)</li>
+            <li><del>MJ-25M/L-D(Windows10 Pro 1903,RAM16GB,SS240GB)</del></li>
         </ul>
         <h3>
             サブ機材
         </h3>
         <ul>
             <li>LG V20 PRO L-01J</li>
+            <li>Lenovo ThinkPad T480s(Windows 10 Pro 1903,i7-8550U,RAM24GB,SSD1000GB)</li>
             <li>SONY Xperia Z Ultla SOL24</li>
             <li>SHARP AQUOS ZETA SH-01H(SIMロック解除済み)</li>
             <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
             <li>ASUS Nexus 7(2013,Wi-Fi,32GB,White)</li>
             <li>Amazon Kindle Fire HD8(2017,16GB)</li>
-            <li>NEC LaVie L LL870/CS(Windows10 Pro 1803|CentOS7,RAM8GB,HDD1000GB | HDD80GB)</li>
+            <li>NEC LaVie L LL870/CS(Windows10 Pro 1803|CentOS7,i5-460M,RAM8GB,HDD1000GB | HDD80GB)</li>
+            <li>Apple iMac 21.5 Late 2009(OSX 10.13.6,RAM8GB,HDD500GB)</li>
         </ul>
         <h3>
             売却予定機材
