[update]add product

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <a href="https://kcgfreeroom.netlify.com" target="_blank" rel="noopener noreferrer" class="nobr">
         KCG空き教室<wbr>リアルタイム<wbr>表示システム
     </a>
+    <a href="html/bitratecalc.html" target="_blank" rel="noopener noreferrer">
+        ビットレート計算機
+    </a>
         <h2>
             Favorite Characters
         </h2>
