[fix&add]無駄文字列消去&リンクの追加

--- a/index.html
+++ b/index.html
@@ -36,18 +36,20 @@
     <h2>
         Products
     </h2>
-    <a href="https://kcgfreeroom.netlify.com" target="_blank" rel="noopener noreferrer" class="nobr">
+    <a href="https://kcgfreeroom.netlify.com">
         KCG空き教室<wbr>リアルタイム<wbr>表示システム
     </a><br>
-    <a href="html/bitratecalc.html" target="_blank" rel="noopener noreferrer">
+    <a href="html/bitratecalc.html">
         ビットレート計算機
-    </a>
+    </a><!-- <br>
+    <a href="./html/nanoha_karaoke.html">
+        機種別<wbr>なのは<wbr>楽曲<wbr>リスト<wbr>表示システム
+    </a> -->
         <h2>
             Favorite Characters
         </h2>
         <ul class="nobr">
-            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/char.htm#yr" target="_blank"
-                    rel="noopener noreferrer">
+            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/char.htm#yr">
                     あずま夜|<wbr>はつゆき<wbr>さくら
                 </a></li>
             <li>
