[update]add footer

--- a/html/nanoha_karaoke.html
+++ b/html/nanoha_karaoke.html
@@ -23,5 +23,24 @@
     <h1>
         機種別なのは楽曲リスト表示システム
     </h1>
+
+
+    <h5 class="nobr">
+        作者: <a href="https://sakurayoru.dev" target="_blank" rel="noopener noreferrer">
+            さくら夜
+        </a> <wbr><a href="https://github.com/sakurayoru" target="_blank" rel="noopener noreferrer">
+            GitHub
+        </a> <wbr><a href="http://twitter.com/kk16p586" target="_blank" rel="noopener noreferrer">
+            Twitter
+        </a><br />
+        データが<wbr>正確であるかは<wbr>保証できません<br />
+        (PC?)は<wbr>PCが置かれて<wbr>いると<wbr>推測される<wbr>が<wbr>確認が<wbr>とれて<wbr>いない<wbr>部屋です。<br />
+        参考&検索版:<a href="https://kcg-available-room.netlify.com/" target="_blank" rel="noopener noreferrer">
+            KCG空き部屋検索β
+        </a><br />
+        開発状況 : <a href="https://github.com/sakurayoru/kcgfreeroom/commits/master" target="_blank"
+            rel="noopener noreferrer">
+            Commits | GitHub
+        </a>
 </body>
 </html>
