[update]devices表示まで作った

--- a/html/nanoha_karaoke.html
+++ b/html/nanoha_karaoke.html
@@ -20,27 +20,36 @@
     </title>
 </head>
 <body>
-    <h1>
-        機種別なのは楽曲リスト表示システム
+    <h1 class="nobr">
+        機種別<wbr>なのは<wbr>楽曲リスト<wbr>表示システム
     </h1>
+    <h2 class="nobr">
+        なのは楽曲が<wbr>通信カラオケの<wbr>どのカラオケ機種で<wbr>歌えるかを<wbr>調べられる<wbr>ページです。
+    </h2>
+    <h3 class="nobr">
+        対応楽曲は、<wbr>魔法少女<wbr>リリカルなのは <wbr>キャラクターソング <wbr>
+        コンプリートBOX<wbr>に収録されている<wbr>楽曲と<wbr>各作品の<wbr>主題歌が<wbr>
+        <wbr>検索対象です。<hr>
+        検索可能機種は、<wbr>Hyper Joy V2,<wbr>Hyper Joy WAVE,<wbr>JOYSOUND CROSSO,<wbr>
+        JOYSOUND f1,<wbr>JOYSOUND MAX,<wbr>JOYSOUND MAX 2,<wbr>JOYSOUND MAX GO<wbr>
+        (最新機種)<wbr>JOYSOUND JEWEL<wbr>(WAVEベース),<wbr>JOYSOUND 響<wbr>(MAXベース),<wbr>
+        JOYSOUND 響Ⅱ<wbr>(MAX2ベース),<br>
+        BB cyber DAM,<wbr>Premier DAM,<wbr>LIVE DAM,<wbr>LIVE DAM STADIUM<wbr>
+        (STAGE含む),<wbr>LIVE DAM Ai<wbr>(最新機種),<wbr>cyber DAM G70,<wbr>Party DAM V,<wbr>
+        CYBER DAM α,<wbr>Cyber DAM HD,<wbr>Party DAM HD,<wbr>FREE DAM HD,<wbr>Party DAM 20V<wbr>です。
+    </h3>
 
+    <h4>
+        <span id="songs"></span>
+    </h4>
 
     <h5 class="nobr">
-        作者: <a href="https://sakurayoru.dev" target="_blank" rel="noopener noreferrer">
+        作者: <a href="https://sakurayoru.dev">
             さくら夜
-        </a> <wbr><a href="https://github.com/sakurayoru" target="_blank" rel="noopener noreferrer">
+        </a> <wbr><a href="https://github.com/sakurayoru">
             GitHub
-        </a> <wbr><a href="http://twitter.com/kk16p586" target="_blank" rel="noopener noreferrer">
+        </a> <wbr><a href="http://twitter.com/kk16p586">
             Twitter
-        </a><br />
-        データが<wbr>正確であるかは<wbr>保証できません<br />
-        (PC?)は<wbr>PCが置かれて<wbr>いると<wbr>推測される<wbr>が<wbr>確認が<wbr>とれて<wbr>いない<wbr>部屋です。<br />
-        参考&検索版:<a href="https://kcg-available-room.netlify.com/" target="_blank" rel="noopener noreferrer">
-            KCG空き部屋検索β
-        </a><br />
-        開発状況 : <a href="https://github.com/sakurayoru/kcgfreeroom/commits/master" target="_blank"
-            rel="noopener noreferrer">
-            Commits | GitHub
         </a>
 </body>
 </html>
