[fix]閉じタグ忘れを修正

--- a/html/nanoha_karaoke.html
+++ b/html/nanoha_karaoke.html
@@ -23,9 +23,11 @@
     <h1 class="nobr">
         機種別<wbr>なのは<wbr>楽曲リスト<wbr>表示システム
     </h1>
+
     <h2 class="nobr">
         なのは楽曲が<wbr>通信カラオケの<wbr>どのカラオケ機種で<wbr>歌えるかを<wbr>調べられる<wbr>ページです。
     </h2>
+
     <h3 class="nobr">
         対応楽曲は、<wbr>魔法少女<wbr>リリカルなのは <wbr>キャラクターソング <wbr>
         コンプリートBOX<wbr>に収録されている<wbr>楽曲と<wbr>各作品の<wbr>主題歌が<wbr>
@@ -36,7 +38,7 @@
         JOYSOUND 響Ⅱ<wbr>(MAX2ベース),<br>
         BB cyber DAM,<wbr>Premier DAM,<wbr>LIVE DAM,<wbr>LIVE DAM STADIUM<wbr>
         (STAGE含む),<wbr>LIVE DAM Ai<wbr>(最新機種),<wbr>cyber DAM G70,<wbr>Party DAM V,<wbr>
-        CYBER DAM α,<wbr>Cyber DAM HD,<wbr>Party DAM HD,<wbr>FREE DAM HD,<wbr>Party DAM 20V<wbr>です。
+        CYBER DAM α,<wbr>Cyber DAM HD,<wbr>Party DAM HD,<wbr>FREE DAM HD,<wbr>Party DAM 20V<wbr>です。<hr>
     </h3>
 
     <h4>
@@ -44,6 +46,7 @@
     </h4>
 
     <h5 class="nobr">
+        <hr>
         作者: <a href="https://sakurayoru.dev">
             さくら夜
         </a> <wbr><a href="https://github.com/sakurayoru">
@@ -51,5 +54,6 @@
         </a> <wbr><a href="http://twitter.com/kk16p586">
             Twitter
         </a>
+    </h5>
 </body>
 </html>
