[update]databaseの日付情報を書き足した

--- a/html/nanoha_karaoke.html
+++ b/html/nanoha_karaoke.html
@@ -25,12 +25,13 @@
     </h1>
 
     <h2 class="nobr">
-        なのは楽曲が<wbr>通信カラオケの<wbr>どのカラオケ機種で<wbr>歌えるかを<wbr>調べられる<wbr>ページです。
+        なのは楽曲が<wbr>通信カラオケの<wbr>どのカラオケ機種で<wbr>歌えるかを<wbr>調べられる<wbr>ページです。<br>
+        データは、<wbr>2020/1/24<wbr>時点でのものです。
     </h2>
 
     <h3 class="nobr">
         対応楽曲は、<wbr>魔法少女<wbr>リリカルなのは <wbr>キャラクターソング <wbr>
-        コンプリートBOX<wbr>に収録されている<wbr>楽曲と<wbr>各作品の<wbr>主題歌が<wbr>
+        コンプリートBOX<wbr>に収録されている<wbr>楽曲と、<wbr>各作品の<wbr>主題歌が<wbr>
         <wbr>検索対象です。<hr>
         検索可能機種は、<wbr>Hyper Joy V2,<wbr>Hyper Joy WAVE,<wbr>JOYSOUND CROSSO,<wbr>
         JOYSOUND f1,<wbr>JOYSOUND MAX,<wbr>JOYSOUND MAX 2,<wbr>JOYSOUND MAX GO<wbr>
