[fix]意図しない改行を防ぐように変更

--- a/html/nanoha_karaoke.html
+++ b/html/nanoha_karaoke.html
@@ -33,13 +33,15 @@
         対応楽曲は、<wbr>魔法少女<wbr>リリカルなのは <wbr>キャラクターソング <wbr>
         コンプリートBOX<wbr>に収録されている<wbr>楽曲と、<wbr>各作品の<wbr>主題歌が<wbr>
         <wbr>検索対象です。<hr>
-        検索可能機種は、<wbr>Hyper Joy V2,<wbr>Hyper Joy WAVE,<wbr>JOYSOUND CROSSO,<wbr>
+        検索可能機種は、<wbr>HyperJoyV2,<wbr>HyperJoyWAVE,<wbr>JOYSOUND CROSSO,<wbr>
         JOYSOUND f1,<wbr>JOYSOUND MAX,<wbr>JOYSOUND MAX 2,<wbr>JOYSOUND MAX GO<wbr>
-        (最新機種)<wbr>JOYSOUND JEWEL<wbr>(WAVEベース),<wbr>JOYSOUND 響<wbr>(MAXベース),<wbr>
+        (最新機種)<br>
+        JOYSOUND JEWEL<wbr>(WAVEベース),<wbr>JOYSOUND 響<wbr>(MAXベース),<wbr>
         JOYSOUND 響Ⅱ<wbr>(MAX2ベース),<br>
         BB cyber DAM,<wbr>Premier DAM,<wbr>LIVE DAM,<wbr>LIVE DAM STADIUM<wbr>
-        (STAGE含む),<wbr>LIVE DAM Ai<wbr>(最新機種),<wbr>cyber DAM G70,<wbr>Party DAM V,<wbr>
-        CYBER DAM α,<wbr>Cyber DAM HD,<wbr>Party DAM HD,<wbr>FREE DAM HD,<wbr>Party DAM 20V<wbr>です。<hr>
+        (STAGE含む),<wbr>LIVE DAM Ai<wbr>(最新機種),<br>
+        cyber DAM G70,<wbr>Party DAM V,<wbr>CYBER DAM α,<wbr>Cyber DAM HD,<wbr>
+        Party DAM HD,<wbr>FREE DAM HD,<wbr>Party DAM 20V<wbr>です。<hr>
     </h3>
 
     <h4>
