--- a/html/nanoha_karaoke.html
+++ b/html/nanoha_karaoke.html
@@ -42,6 +42,35 @@
         (STAGE含む),<wbr>LIVE DAM Ai<wbr>(最新機種),<br>
         cyber DAM G70,<wbr>Party DAM V,<wbr>CYBER DAM α,<wbr>Cyber DAM HD,<wbr>
         Party DAM HD,<wbr>FREE DAM HD,<wbr>Party DAM 20V<wbr>です。<hr>
+        <select name="example">
+            <option value="0">DAMで歌える</option>
+            <option value="1">JOYSOUNDで歌える</option>
+            <option value="2">両方で歌える</option>
+            <option value="3">[2003]Hyper Joy V2</option>
+            <option value="4">[2006]Hyper Joy WAVE</option>
+            <option value="5">[2009]CROSSO</option>
+            <option value="6">[2012]JOYSOUND f1</option>
+            <option value="7">[2015]JOYSOUND MAX</option>
+            <option value="8">[2017]JOYSOUND MAX 2</option>
+            <option value="9">[2019]JOYSOUND MAX GO</option>
+            <option value="10">[2008]JOYSOUND JEWEL(WAVEベース)</option>
+            <option value="11">[2012]JOYSOUND fR(f1ベース)</option>
+            <option value="12">[2015]JOYSOUND 響(MAXベース)</option>
+            <option value="13">[2019]JOYSOUND 響Ⅱ(MAX2ベース)</option>
+            <option value="14">[2003]BB cyber DAM</option>
+            <option value="15">[2007]Premier DAM</option>
+            <option value="16">[2010]LIVE DAM</option>
+            <option value="17">[2015]LIVE DAM STADIUM</option>
+            <option value="18">[2019]LIVE DAM Ai</option>
+            <option value="19">[2005]DAM G70</option>
+            <option value="20">[2008]Party DAM V</option>
+            <option value="21">[2010]CYBER DAM α</option>
+            <option value="22">[2012]Cyber DAM HD</option>
+            <option value="23">[2013]Party DAM HD</option>
+            <option value="24">[2016]FREE DAM HD</option>
+            <option value="25">[2018]Party DAM 20V</option>
+        </select>
+                
     </h3>
 
     <h4>
