--- a/html/nanoha_karaoke.html
+++ b/html/nanoha_karaoke.html
@@ -42,7 +42,7 @@
         (STAGE含む),<wbr>LIVE DAM Ai<wbr>(最新機種),<br>
         cyber DAM G70,<wbr>Party DAM V,<wbr>CYBER DAM α,<wbr>Cyber DAM HD,<wbr>
         Party DAM HD,<wbr>FREE DAM HD,<wbr>Party DAM 20V<wbr>です。<hr>
-        <select name="example">
+        <select name="device">
             <option value="0">DAMで歌える</option>
             <option value="1">JOYSOUNDで歌える</option>
             <option value="2">両方で歌える</option>
