--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </a><br>
     <a href="html/bitratecalc.html">
         ビットレート計算機
-    </a><!-- <br>
-    <a href="./html/nanoha_karaoke.html">
+    </a><br>
+    <a href="https://nanoha-karaoke-search.netlify.com/">
         機種別<wbr>なのは<wbr>楽曲<wbr>リスト<wbr>表示システム
-    </a> -->
+    </a>
         <h2>
             Favorite Characters
         </h2>
