[add]STEAM Link

--- a/index.html
+++ b/index.html
@@ -64,40 +64,59 @@
             好きな作品
         </h2>
         <ul class="nobr">
-            <li><a href="https://colopl.co.jp/magicianwiz/">
+            <li>
+                <a href="https://colopl.co.jp/magicianwiz/">
                     魔法使いと<wbr>黒猫の<wbr>ウィズ
-        </a></li>
-            <li><a href="http://www.corocoro.tv/pokesp/">
+                </a>
+            </li>
+            <li>
+                <a href="http://www.corocoro.tv/pokesp/">
                     ポケットモンスター <wbr>SPECIAL
-        </a></li>
-            <li><a href="http://www.nanoha.com/">
+                </a>
+            </li>
+            <li>
+                <a href="http://www.nanoha.com/">
                     魔法少女リリカル<wbr>なのは
-        </a></li>
-            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
+                </a>
+            </li>
+            <li>
+                <a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
                     はつゆき<wbr>さくら
-        </a></li>
-            <li><a href="http://sagaplanets.product.co.jp/works/hanasaki/">
+                </a>
+            </li>
+            <li>
+                <a href="http://sagaplanets.product.co.jp/works/hanasaki/">
                     花咲<wbr>ワークスプリング!
-        </a></li>
-            <li><a href="http://www.yuzu-soft.com/products/senren/">
+                </a>
+            </li>
+            <li>
+                <a href="http://www.yuzu-soft.com/products/senren/">
                     千恋*万花
-                </a></li>
-            <li><a href="http://www.yuzu-soft.com/new/product/sothewitch/">
+                </a>
+            </li>
+            <li>
+                <a href="http://www.yuzu-soft.com/new/product/sothewitch/">
                     サノバウィッチ
-                </a></li>
-            <li><a href="https://cinderella.idolmaster.jp/sl-stage/">
+                </a>
+            </li>
+            <li>
+                <a href="https://cinderella.idolmaster.jp/sl-stage/">
                     アイドルマスター <wbr>シンデレラガールズ <wbr>スターライトステージ
-        </a></li>
-            <li><a href="https://www.inazuma.jp/">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.inazuma.jp/">
                     イナズマイレブン
-                </a></li>
+                </a>
+            </li>
         </ul>
         <h2>
             Accounts
         </h2>
         <a href="https://twitter.com/kk16p586">さくら夜 | Twitter</a><br>
-        <a href="https://github.com/sakurayoru">GitHub | さくら夜</a><br>
-        <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a>
+        <a href="https://github.com/sakurayoru">さくら夜 | GitHub</a><br>
+        <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a><br>
+        <a href="https://steamcommunity.com/id/sakuyoru2000/">さくら夜 | STEAM</a>
         <h2>
             所持機材について
         </h2>
@@ -121,7 +140,7 @@
         </h3>
         <ul>
             <li>LG V20 PRO L-01J</li>
-            <li>Lenovo ThinkPad T480s(Windows 10 Pro 1903,i7-8550U,RAM24GB,SSD1000GB)</li>
+            <li>Lenovo ThinkPad T480s(Windows 10 Pro 1909,i7-8550U,RAM24GB,SSD1000GB)</li>
             <li>SONY Xperia Z Ultla SOL24</li>
             <li>SHARP AQUOS ZETA SH-01H(SIMロック解除済み)</li>
             <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
